# potato

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: api.rs  deps.ts  main.rs  site.ts
src/routes/: api.ts  static.ts
static/html/: index.html
