[package]
name = "potato"
version = "0.1.0"
authors = ["probablybased <76058207+probablybased@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
actix-web = "3"
actix-files = "0.5.0"
mime = "0.3.16"